--- a/website/src/assets/scss/_sections.scss
+++ b/website/src/assets/scss/_sections.scss
@@ -374,10 +374,16 @@ section {
   padding-top: 40px;
 
   .portfolio-details-slider {
-    img {
-      max-height: 80vh;
-      width: 100%;
-      object-fit: cover;
+
+    .swiper-slide {
+      display: flex;
+
+      img {
+        margin: auto;
+        max-height: 800px;
+        max-width: 100%;
+        object-fit: cover;
+      }
     }
 
     .swiper-pagination {
